--- a/html/events/details/marriage.html
+++ b/html/events/details/marriage.html
@@ -61,31 +61,52 @@
 
         <form class="form-container" action="" method="post" id="marriageDetails">
 
-          <div class="row">
-            <div class="">
-
+          <div class="row-flex">
+            <span class="col-9">
               <label for="">Church Name</label>
+              <input class="input" type="text">
+            </span>
+
+            <span class="col-3">
+              <label for="">Registry No.</label>
+              <input class="input" type="text">
+            </span>
+
+            <span class="col-9">
+              <label for="">Location</label>
               <input class="input" type="text" name="" value="" placeholder="">
-              <label for="">Organizer</label>
-              <input class="input" type="text" name="" value="" placeholder="">
+            </span>
+
+            <span class="col-3">
               <label for="">Date</label>
               <input class="input" type="date" name="" value="" placeholder="">
-            </div>
+            </span>
 
-            <div class="">
-              <label for="">Registry No.</label>
-              <input class="input" type="text" name="" value="">
+            <span class="col-6">
+              <label for="">Organizer</label>
+              <input class="input" type="text" name="" value="" placeholder="">
+            </span>
+
+            <span class="col-3">
               <label for="">Contact No.</label>
-              <input class="input" type="email" name="" value="" placeholder="">
+              <input class="input" type="text" name="" value="">
+            </span>
+
+            <span class="col-3">
               <label for="">Time</label>
               <input class="input" type="time" name="">
-            </div>
+            </span>
+
           </div>
 
-          <label for="">Location</label>
-          <input class="input" type="text" name="" value="" placeholder="">
-
           <hr>
+
+          <span class="col-9">
+            <label for="">Address</label>
+            <input class="input" type="text">
+          </span>
+
+
 
           <h3 class="heading2">Groom</h3>
 
@@ -98,8 +119,7 @@
               <label for="">Birthplace</label>
               <input class="input" type="text" name="" value="" placeholder="">
 
-              <label for="">Address</label>
-              <input class="input" type="text" placeholder="House no. Street, City/ Municipality, Province, Country">
+
 
               <label for="">Father's Name</label>
               <input class="input" type="text" placeholder="Surname, Firstname M.I">
