--- a/user.html
+++ b/user.html
@@ -29,7 +29,7 @@
 
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="user.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Events</a>
@@ -111,103 +111,101 @@
         <p class="section-description">lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla malesuada pellentesque elit eget gravida cum. Ultrices eros in cursus turpis
           massa tincidunt dui.</p>
 
-        <div class="container">
-          <div class="carousel">
-            <input type="radio" name="slides" checked="checked" id="slide-1">
-            <input type="radio" name="slides" id="slide-2">
-            <input type="radio" name="slides" id="slide-3">
-            <input type="radio" name="slides" id="slide-4">
-            <input type="radio" name="slides" id="slide-5">
-            <input type="radio" name="slides" id="slide-6">
-            <ul class="carousel__slides">
-              <li class="carousel__slide">
-                <figure>
-                  <div>
-                    <img src="images/1.png" alt="" width="500" height="600">
-                  </div>
-                  <figcaption>
-                    Wedding
-                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="carousel__slide">
-                <figure>
-                  <div>
-                    <img src="images/2.png" alt="" width="500" height="600">
-                  </div>
-                  <figcaption>
-                    Baptism
-                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="carousel__slide">
-                <figure>
-                  <div>
-                    <img src="images/3.png" alt="" width="500" height="600">
-                  </div>
-                  <figcaption>
-                    Youth Activities
-                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="carousel__slide">
-                <figure>
-                  <div>
-                    <img src="images/6.png" alt="" width="500" height="600">
-                  </div>
-                  <figcaption>
-                    Anniversaries.
-                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="carousel__slide">
-                <figure>
-                  <div>
-                    <img src="images/5.png" alt="" width="500" height="600">
-                  </div>
-                  <figcaption>
-                    Prayer Meeting
-                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="carousel__slide">
-                <figure>
-                  <div>
-                    <img src="images/4.png" alt="" width="500" height="600">
-                  </div>
-                  <figcaption>
-                    Practice
-                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-                  </figcaption>
-                </figure>
-              </li>
-            </ul>
-            <ul class="carousel__thumbnails">
-              <li>
-                <label for="slide-1"><img src="images/1.png" alt="" width="500" height="600"></label>
-              </li>
-              <li>
-                <label for="slide-2"><img src="images/2.png" alt="" width="500" height="600"></label>
-              </li>
-              <li>
-                <label for="slide-3"><img src="images/3.png" alt="" width="500" height="600"></label>
-              </li>
-              <li>
-                <label for="slide-4"><img src="images/6.png" alt="" width="500" height="600"></label>
-              </li>
-              <li>
-                <label for="slide-5"><img src="images/5.png" alt="" width="500" height="600"></label>
-              </li>
-              <li>
-                <label for="slide-6"><img src="images/4.png" alt="" width="500" height="600"></label>
-              </li>
-            </ul>
-          </div>
+        <div class="carousel">
+          <input type="radio" name="slides" checked="checked" id="slide-1">
+          <input type="radio" name="slides" id="slide-2">
+          <input type="radio" name="slides" id="slide-3">
+          <input type="radio" name="slides" id="slide-4">
+          <input type="radio" name="slides" id="slide-5">
+          <input type="radio" name="slides" id="slide-6">
+          <ul class="carousel__slides">
+            <li class="carousel__slide">
+              <figure>
+                <div>
+                  <img src="images/1.png" alt="" width="500" height="600">
+                </div>
+                <figcaption>
+                  Wedding
+                  <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="carousel__slide">
+              <figure>
+                <div>
+                  <img src="images/2.png" alt="" width="500" height="600">
+                </div>
+                <figcaption>
+                  Baptism
+                  <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="carousel__slide">
+              <figure>
+                <div>
+                  <img src="images/3.png" alt="" width="500" height="600">
+                </div>
+                <figcaption>
+                  Youth Activities
+                  <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="carousel__slide">
+              <figure>
+                <div>
+                  <img src="images/6.png" alt="" width="500" height="600">
+                </div>
+                <figcaption>
+                  Anniversaries.
+                  <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="carousel__slide">
+              <figure>
+                <div>
+                  <img src="images/5.png" alt="" width="500" height="600">
+                </div>
+                <figcaption>
+                  Prayer Meeting
+                  <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="carousel__slide">
+              <figure>
+                <div>
+                  <img src="images/4.png" alt="" width="500" height="600">
+                </div>
+                <figcaption>
+                  Practice
+                  <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+          <ul class="carousel__thumbnails">
+            <li>
+              <label for="slide-1"><img src="images/1.png" alt="" width="500" height="600"></label>
+            </li>
+            <li>
+              <label for="slide-2"><img src="images/2.png" alt="" width="500" height="600"></label>
+            </li>
+            <li>
+              <label for="slide-3"><img src="images/3.png" alt="" width="500" height="600"></label>
+            </li>
+            <li>
+              <label for="slide-4"><img src="images/6.png" alt="" width="500" height="600"></label>
+            </li>
+            <li>
+              <label for="slide-5"><img src="images/5.png" alt="" width="500" height="600"></label>
+            </li>
+            <li>
+              <label for="slide-6"><img src="images/4.png" alt="" width="500" height="600"></label>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -280,15 +278,6 @@
         <hr>
         <hr>
       </span>
-
-      <!-- <section class="cta"> -->
-        <!-- <h2 class="big-heading">A place where everyone joins together.</h2> -->
-        <!-- <h2 class="big-heading">The house that is open for everyone anytime.</h2>
-        <div class="row">
-          <button class="btn btn-submit" type="button" name="button">Schedule an Event</button>
-          <button class="btn btn-outline" type="button" name="button">View activities</button>
-        </div>
-      </section> -->
 
     </div>
 
