--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -11,9 +11,7 @@
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,8 +21,8 @@
   <section>
     <nav class="navbar">
       <div class="navbar-brand">
-        <img class="navbar-brand-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo">
-        <h1 class="navbar-brand-text">CHURCH</h1>
+        <img class="navbar-brand-logo" src="../images/logo.png" alt="Web application logo">
+        <h1 class="navbar-brand-text">Church</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -51,35 +49,7 @@
       <h2 class="section-heading">Dashboard</h2>
     </header>
 
-    <div class="event-overview">
-      <span class="event-overview-box">
-        <h4 class="secondary-texts">Wedding</h4>
-        <p class="event-counter"><strong>###</strong></p>
-      </span>
-
-      <hr class="event-divider">
-
-      <span class="event-overview-box">
-        <h4 class="secondary-texts">Baptismal</h4>
-        <p class="event-counter"><strong>###</strong></p>
-      </span>
-
-      <hr class="event-divider">
-
-      <span class="event-overview-box">
-        <h4 class="secondary-texts">Youth Activities</h4>
-        <p class="event-counter"><strong>###</strong></p>
-      </span>
-
-      <hr class="event-divider">
-
-      <span class="event-overview-box">
-        <h4 class="secondary-texts">Anniversaries</h4>
-        <p class="event-counter"><strong>###</strong></p>
-      </span>
-    </div>
-
-    <div class="side-to-side">
+    <div class="side-to-side dashboard-panel">
       <div class="dashboard-box" onclick="changePage('events/index.html');">
         <div class="dashboard-box-header">
           <h3 class="dashboard-box-heading">Events</h3>
