--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,15 +27,13 @@
 
   <!-- Login -->
   <section class="container-center">
-    <div class="login-container">
-
-      <div class="login-1sthalf col-6">
-          <img class="login-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo">
-          <h1 class="login-heading">CHURCH</h1>
+    <div class="login-container row">
+      <div class="login-logo-container">
+          <img class="login-logo" src="images/logo.png" alt="Web application logo">
+          <h1 class="big-heading">Catholic</h1>
       </div>
 
-      <div class="login-2ndhalf col-6">
-        <!-- <div class="login-form-container"> -->
+      <div class="login-form">
           <!-- Uncomment form when passing the project -->
           <!-- <form class="" action="html/dashboard.html" method="post"> -->
             <label for="usernameInput">Username</label>
@@ -117,7 +113,6 @@
 
 
   <!-- Forgot Password -->
-
   <section class="container-center hidden" id="forgotPassword">
     <div class="popup">
       <div class="popup-header">
